Fix image overspill in checkout

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -568,8 +568,8 @@ span {
 }
 
 .toast-brush-image {
-    width: 100px;
-    height: 100px;
+    width: 60px;
+    height: 60px;
     object-fit: cover;
     object-position: center;
     border-radius: 10px;
